# ALL-training

./: .gitignore  ALL.sln  ALL.vcxproj  ALL.vcxproj.filters  ATN.cpp  ATN.h  CMakeLists.txt  DFA.h  Exception.h  Grammar.cpp  LICENSE  Parser.cpp  README.md  StrUtils.cpp
src/: ATN.cpp  DFA.cpp  DFA.h  Grammar.cpp  Grammar.h  Parser.h  StrUtils.cpp  StrUtils.h  main.cpp
